--- a/seungho.lee/ch07/example/app/build.gradle
+++ b/seungho.lee/ch07/example/app/build.gradle
@@ -25,3 +25,11 @@ application {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
+}
+
+task prepareKotlinBuildScriptModel {
+
+}
