--- a/seungho.lee/ch07/example/app/build.gradle
+++ b/seungho.lee/ch07/example/app/build.gradle
@@ -7,10 +7,20 @@ repositories {
 }
 
 ext {
+    slf4jVersion = '1.7.30'
+    logbackVersion = '1.2.3'
     lombokVersion = '1.18.18'
 }
 
+List loggers = [
+    "org.slf4j:slf4j-api:${slf4jVersion}",
+    "org.slf4j:log4j-over-slf4j:${slf4jVersion}",
+    "ch.qos.logback:logback-core:${logbackVersion}",
+    "ch.qos.logback:logback-classic:${logbackVersion}"
+]
+
 dependencies {
+    implementation loggers
     implementation "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
